Add auto translation and code optimizations